<resources>
    <string name="app_name">Reader</string>
    <string name="register">Register</string>
    <string name="reader">Reader.</string>
    <string name="sign_in">Sign In</string>
    <string name="login_page">LOGIN PAGE</string>
    <string name="registration_page">REGISTRATION PAGE</string>
    <string name="e_mail">E-mail</string>
    <string name="name">User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="submit">Submit</string>
    <string name="login_now">Already have an Account. Login Now</string>
    <string name="register_now">Don\'t have an Account. Register Now</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_fragment">HOME Fragment</string>
    <string name="fragment_notification">Fragment Notification</string>
    <string name="fragment_profile">Fragment Profile</string>
    <string name="stay_informed_stay_connected"><![CDATA[Stay Informed & Stay connected !]]></string>
    <string name="add_url_to_database">Add URL to Database</string>
    <string name="add_url_text">Add URL Activity</string>
    <string name="paste_the_link_here">Paste The Link Here</string>
    <string name="add_link_to_the_database">Add link to the Database</string>
    <string name="website_name">Website Name</string>
    <string name="add_url">Add URL</string>
    <string name="database_connection">DATABASE CONNECTION</string>
    <string name="link_here">Link Here</string>
    <string name="website">Website</string>
    <string name="url_database">URL Database</string>
    <string name="url_list">URL List</string>
    <string name="remove">Remove</string>
    <string name="website_link">Website Link</string>
    <string name="website_name_text">Website Name</string>
    <string name="welcome_to_reader_s_world">Welcome to Reader\'s World!</string>
    <string name="terms_and_conditions_are_applied">Terms and Conditions are applied.</string>
    <string name="user_name">User Name</string>
    <string name="name_profile">Name:</string>
    <string name="article_list">Article list</string>
</resources>