<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/splash_color_light"
    tools:context=".Welcome_activity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/welcome_img"
            tools:ignore="MissingConstraints" />


        <TextView
            android:layout_width="411dp"
            android:layout_height="27dp"
            android:gravity="center"
            android:text="@string/welcome_to_reader_s_world"
            android:textStyle="bold"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/welcome_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView3"
            app:layout_constraintVertical_bias="0.96" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/welcome_register"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginBottom="140dp"
            android:text="@string/register"
            android:textColor="@color/black"
            app:backgroundTint="@color/button_color"
            app:cornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/welcome_login"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:text="@string/sign_in"
            android:textColor="@color/black"
            app:backgroundTint="@color/button_color"
            app:cornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_register"
            app:layout_constraintVertical_bias="0.201" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms_and_conditions_are_applied"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_login" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>